[gd_scene load_steps=11 format=2]

[ext_resource path="res://Art/smallbuy.png" type="Texture" id=1]
[ext_resource path="res://Art/smallsellhover.png" type="Texture" id=2]
[ext_resource path="res://Art/smallbuyselected.png" type="Texture" id=3]
[ext_resource path="res://Art/smallsell.png" type="Texture" id=4]
[ext_resource path="res://Art/smallbuyhover.png" type="Texture" id=5]
[ext_resource path="res://Art/placeholderlogo.png" type="Texture" id=6]
[ext_resource path="res://Art/smallsellselect.png" type="Texture" id=7]
[ext_resource path="res://Art/stockicon.png" type="Texture" id=8]
[ext_resource path="res://Scenes/MainFont.tres" type="DynamicFont" id=9]
[ext_resource path="res://Scenes/StockCard.gd" type="Script" id=10]

[node name="StockCard" type="Control"]
anchor_right = 0.112
anchor_bottom = 0.267
margin_right = 0.32
margin_bottom = -0.12001
rect_pivot_offset = Vector2( 35.2148, 46.5758 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardBg" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="ColorRect" parent="."]
margin_left = 3.89445
margin_top = 42.0669
margin_right = 69.8944
margin_bottom = 44.0669
color = Color( 0, 0, 0, 1 )

[node name="CompanyLabel" type="Label" parent="."]
margin_left = -12.7322
margin_top = 34.4415
margin_right = 83.2678
margin_bottom = 47.4415
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Company"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_left = 19.2186
margin_top = 0.940435
margin_right = 51.2186
margin_bottom = 32.9404
texture = ExtResource( 6 )

[node name="WorthLabel" type="Label" parent="."]
margin_left = 3.33258
margin_top = 48.0
margin_right = 66.3326
margin_bottom = 62.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Worth:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QtnLabel" type="Label" parent="."]
margin_left = 3.33258
margin_top = 58.0131
margin_right = 66.3326
margin_bottom = 72.0131
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Qtn:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopularityLabel" type="Label" parent="."]
margin_left = 3.0
margin_top = 68.4786
margin_right = 75.0
margin_bottom = 82.4786
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Popularity: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyBtn" type="TextureButton" parent="."]
margin_left = 2.0
margin_top = 79.0
margin_right = 26.0
margin_bottom = 95.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellBtn" type="TextureButton" parent="."]
margin_left = 45.0
margin_top = 79.0
margin_right = 69.0
margin_bottom = 95.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BuyBtn" to="." method="_buy_stock"]
[connection signal="pressed" from="SellBtn" to="." method="_sell_stock"]
